fix: invisible card buttons bug

--- a/components/canvas/CardButtons.module.scss
+++ b/components/canvas/CardButtons.module.scss
@@ -24,9 +24,7 @@
 
 .cardButtonsContainer--bottom {
   position: absolute;
-  bottom: 0px;
   width: 160px;
-  transform: translateY(100%);
   margin-left: -25px;
   gap: 15px;
 }
